--- a/app/assets/stylesheets/challenges.css.scss
+++ b/app/assets/stylesheets/challenges.css.scss
@@ -1304,7 +1304,7 @@ text-align: center;
 				margin-right:0px;
 				margin-top:15px;
 				font-family : "gotham-Bold";
-				font-size : 18px;
+				font-size : 16px;
 				color: white;
 					.tags{
 					color: white;
@@ -1374,6 +1374,9 @@ text-align: center;
 
 								}
 							}
+						}
+						div:hover{
+						background-color: #AAD0FF;
 						}
 
 
@@ -2069,7 +2072,7 @@ text-align: center;
 			margin-right:15px;
 			margin-top:15px;
 			font-family : "gotham-Bold";
-			font-size : 18px;
+			font-size : 16px;
 			color: white;
 				.tags{
 				color: white;
@@ -2136,6 +2139,10 @@ text-align: center;
 							
 							}
 						}
+					}
+					
+					div:hover{
+					background-color: #AAD0FF;
 					}
 
 
@@ -2972,7 +2979,7 @@ text-align: center;
 				margin-right:0px;
 				margin-top:15px;
 				font-family : "gotham-Bold";
-				font-size : 18px;
+				font-size : 16px;
 				color: white;
 					.tags{
 					color: white;
@@ -3042,7 +3049,10 @@ text-align: center;
 							}
 						}
 
-
+						div:hover{
+						background-color: #AAD0FF;
+						}
+						
 						.moitie-gauche1{
 						width:190px;
 						background-color: #AAD0FF;
@@ -3184,7 +3194,10 @@ text-align: center;
 							}
 						}
 
-
+						div:hover{
+						background-color: #AAD0FF;
+						}
+						
 						.moitie-gauche1{
 						width:190px;
 						background-color: #CCE6FF;
@@ -4260,7 +4273,7 @@ text-align: center;
 				margin-right:0px;
 				margin-top:15px;
 				font-family : "gotham-Bold";
-				font-size : 18px;
+				font-size : 16px;
 				color: white;
 					.tags{
 					color: white;
@@ -4330,7 +4343,10 @@ text-align: center;
 							}
 						}
 
-
+						div:hover{
+						background-color: #AAD0FF;
+						}
+						
 						.moitie-gauche1{
 						width:190px;
 						background-color: #AAD0FF;
@@ -4472,7 +4488,10 @@ text-align: center;
 							}
 						}
 
-
+						div:hover{
+						background-color: #AAD0FF;
+						}
+						
 						.moitie-gauche1{
 						width:190px;
 						background-color: #CCE6FF;
