--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -451,9 +451,10 @@
 	.via{
 	line-height: 20px;
 	font-family:"gotham-Bold";
-	font-size: 18px;
+	font-size: 20px;
 	color: white;
-	margin-left: 15px;
+	letter-spacing: 0px;
+	margin-left: 0px;
 	}
 	}
 	
