--- a/app/views/static_pages/list_ajoindre.html.erb
+++ b/app/views/static_pages/list_ajoindre.html.erb
@@ -5,7 +5,7 @@
 	</br>
 	</br>
 	<ul class ="row" id ="challenge-header">
-		 	        <li class='first'><%= link_to "Toutes les joutes", root_path, class: cp(dialectiques_path)%></li>
+		 	        <li class='first'><%= link_to "Toutes les joutes", dialectiques_path, class: cp(dialectiques_path)%></li>
 		 	   	 	<li><%= link_to "Rejoindre un débat", incomplets_path, class: cp(incomplets_path) %></li>         	
 		 	        <li><%= link_to "Nouvelle joute", new_challenge_path, class: cp(new_challenge_path) %></li>
 	</ul>
