--- a/app/views/challenges/_american.html.erb
+++ b/app/views/challenges/_american.html.erb
@@ -112,7 +112,7 @@
 					
 					<div class="row" id="american-milieu-4">
 						<% @challenge.tags.each do |l|%>
-							<li><%= link_to l.name, list_path(:view =>'tag', :tag => l.name), class: "tags"%></li>
+							<li><%= link_to "##{l.name}", list_path(:view =>'tag', :tag => l.name), class: "tags"%></li>
 						<% end%>
 					</div>
 					
