--- a/app/views/challenges/_lincoln_douglas.html.erb
+++ b/app/views/challenges/_lincoln_douglas.html.erb
@@ -72,7 +72,7 @@
 				
 				<div class="row" id="ld-milieu-4">
 					<% @challenge.tags.each do |l|%>
-						<li><%= link_to l.name, list_path(:view =>'tag', :tag => l.name), class: "tags"%></li>
+						<li><%= link_to "##{l.name}", list_path(:view =>'tag', :tag => l.name), class: "tags"%></li>
 					<% end%>
 				</div>
 
