--- a/app/assets/stylesheets/challenges.css.scss
+++ b/app/assets/stylesheets/challenges.css.scss
@@ -2059,6 +2059,7 @@ text-align: center;
 
 			
 				.title{
+					word-wrap:break-word;
 				padding-top:5px;
 				padding-right: 10px;
 				text-align: left;
@@ -2966,6 +2967,7 @@ text-align: center;
 
 
 					.title{
+						word-wrap:break-word;
 					padding-top:5px;
 					padding-right: 10px;
 					text-align: left;
@@ -4260,6 +4262,7 @@ text-align: center;
 
 
 					.title{
+						word-wrap:break-word;
 					padding-top:5px;
 					padding-right: 10px;
 					text-align: left;
