--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
     
     <link rel="shortcut icon" href="/assets/favicon.png" type="image/x-icon" />
     
-    <title>Moutoners</title>
+    <title>Moutoners | Des Débats</title>
     
     <!--[if lt IE 9]>
       <script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
